Send QUIC ping packets when there are draining streams, even if there are no open streams.

BUG=600001

Review-Url: https://codereview.chromium.org/2085633003
Cr-Commit-Position: refs/heads/master@{#400846}

Former-commit-id: 03b32983a8ceb3a1da374cf34ce26b6085abd7b8